# serieux

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml
benchmarks/: conftest.py  interfaces.py  matrix-json.yaml  test_all.py  test_simple.py
examples/: command_line.py  dotted.py  encrypt.py  env_interpolation.py  grid_search.py  rgb.py  target.py  var_interpolation.py
src/serieux/: __init__.py  __main__.py  auto.py  base.py  core.py  ctx.py  deserialization.py  docstrings.py  exc.py  formats.py  fromfile.py  impl.py  instructions.py  model.py  module.py  partial.py  proxy.py  schema.py  serialization.py  state.py  tell.py  transform.py  tsubclass.py  typetags.py  utils.py
tests/: common.py  conftest.py  definitions.py  test_auto.py  test_cli.py  test_deserialize.py  test_examples.py  test_formats.py  test_fromfile.py  test_impl.py  test_instructions.py  test_interface.py  test_lazy.py  test_model.py  test_module.py  test_partial.py  test_proxy.py  test_schema.py  test_serialize.py  test_state.py  test_tsubclass.py  test_types.py  test_typetags.py  test_utils.py
tests/data/: character-dyn.yaml  clone.yaml  jumbo.txt
tests/features/: test_autotag.py  test_clargs.py  test_comment.py  test_encrypt.py  test_filebacked.py  test_fromfile.py  test_integration.py  test_interpol.py  test_partial.py  test_prompt.py  test_proxy.py  test_tagged.py  test_tagset.py  test_tsubclass.py  test_usermeth.py
tests/test_codegen/: test_deserialize_codegen_Defaults_.txt  test_deserialize_codegen_Point_.txt  test_deserialize_codegen_World_.txt  (+4 more)
(+37 files in other folders)
