[project]
name = "serieux"
version = "0.1.0"
description = "Extremely customizable serialization"
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
dependencies = [
    "ovld~=0.4.0",
    "pyyaml>=6.0.2",
    "wrapt>=1.16.0",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "breakword>=0.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/serieux"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F811", "F722"]
